--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context="com.razerblade.restaurant.Login"
     tools:layout_editor_absoluteY="89dp">
 
@@ -11,8 +12,8 @@
         android:id="@+id/editTextUsername"
         android:layout_width="388dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="60dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginBottom="21dp"
+        android:layout_marginTop="41dp"
         android:ems="10"
         android:hint="Usernmae"
         android:inputType="textPersonName"
@@ -25,7 +26,7 @@
         android:id="@+id/editTextPassword"
         android:layout_width="393dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="33dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -38,7 +39,7 @@
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="34dp"
         android:onClick="gogogo"
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
@@ -50,19 +51,19 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="49dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginStart="15dp"
         android:onClick="gogogo"
         android:text="Lanjut Pesan"
         app:layout_constraintBottom_toTopOf="@+id/googlebtn"
-        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
+        app:layout_constraintStart_toStartOf="@+id/googlebtn"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/googlebtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="394dp"
+        android:layout_marginBottom="276dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
