Admin Crud Logic

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,8 +2,39 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
+    <group android:checkableBehavior="single"
+        android:id="@+id/adminMenu">
 
-    <group android:checkableBehavior="single">
+        <item android:id="@+id/itemAdmin"
+            android:title="Admin">
+            <menu>
+                <item
+                    android:id="@+id/inputMakan"
+                    android:icon="@drawable/ic_restaurant"
+                    android:title="Input Maikan" />
+                <item
+                    android:id="@+id/inputMinum"
+                    android:icon="@drawable/ic_minum"
+                    android:title="Input Minum" />
+            </menu>
+        </item>
+    </group>
+    <group android:checkableBehavior="single"
+        android:id="@+id/kasirMenu">
+
+        <item android:id="@+id/itemKasir"
+            android:title="Kasir">
+            <menu>
+                <item
+                    android:id="@+id/printBill"
+                    android:icon="@drawable/ic_restaurant"
+                    android:title="Print Bill" />
+            </menu>
+        </item>
+    </group>
+
+    <group android:checkableBehavior="single"
+         android:id="@+id/menuPelanggan">
         <item
             android:id="@+id/makan"
             android:icon="@drawable/ic_restaurant"
@@ -20,10 +51,10 @@
             android:id="@+id/help"
             android:icon="@drawable/ic_help"
             android:title="Help" />
-        <item
-            android:id="@+id/logout"
-            android:icon="@drawable/ic_logout"
-            android:title="Logout" />
-    </group>
 
+    </group>
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_logout"
+        android:title="Logout" />
 </menu>
