--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,9 +7,21 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.razerblade.restaurant.MainActivity"
     tools:showIn="@layout/app_bar_main">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="177dp"
+        android:layout_height="103dp"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/logos" />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container1">
+        android:id="@+id/container1"
+        android:layout_below="@+id/imgPhoto">
     </FrameLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
