--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,74 +7,69 @@
     android:orientation="horizontal"
     tools:context="com.razerblade.restaurant.Login"
     tools:layout_editor_absoluteY="89dp">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     <EditText
         android:id="@+id/editTextUsername"
-        android:layout_width="388dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="21dp"
-        android:layout_marginTop="41dp"
-        android:ems="10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
         android:hint="Usernmae"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginLeft="250dp"
+        android:layout_marginRight="250dp"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="393dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
+        android:layout_marginLeft="250dp"
+        android:layout_marginRight="250dp"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="11dp"
-        android:text="Login"
-        app:layout_constraintBottom_toTopOf="@+id/textViewSignUp"
-        app:layout_constraintStart_toStartOf="@+id/googlebtn"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="Login" />
 
     <TextView
         android:id="@+id/textViewLanjut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="272dp"
-        android:layout_marginStart="15dp"
         android:text="Lanjut Pesan"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/googlebtn"
-        app:layout_constraintTop_toBottomOf="@+id/googlebtn" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+       android:layout_gravity="center" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/googlebtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/textViewLanjut"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSignUp"></com.google.android.gms.common.SignInButton>
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="center"></com.google.android.gms.common.SignInButton>
 
     <TextView
         android:id="@+id/textViewSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
-        android:layout_marginStart="33dp"
         android:text="SignUp"
-        app:layout_constraintBottom_toTopOf="@+id/googlebtn"
-        app:layout_constraintStart_toStartOf="@+id/googlebtn"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+       android:layout_gravity="center" />
+        </LinearLayout>
+    </RelativeLayout>
+</RelativeLayout>
