--- a/app/src/main/res/layout/row_menu.xml
+++ b/app/src/main/res/layout/row_menu.xml
@@ -67,6 +67,7 @@
                         <!--android:textStyle="bold"/>-->
 
                         <Button
+                            android:id="@+id/buttonAddChart"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
