--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff0008</color>
+    <color name="colorPrimary">#B70006</color>
+    <color name="colorPrimaryDark">#990005</color>
+    <color name="colorAccent">#B70006</color>
 </resources>
