--- a/app/src/main/res/layout/activity_kasir_detail.xml
+++ b/app/src/main/res/layout/activity_kasir_detail.xml
@@ -7,6 +7,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -31,6 +34,8 @@
                         android:text="HArga Total"/>
                     <EditText
                         android:id="@+id/editTextnoinal"
+                        android:cursorVisible="false"
+                        android:keyboardNavigationCluster="false"
                         android:background="@null"
                         android:gravity="center"
                         android:paddingTop="50dp"
@@ -259,6 +264,7 @@
             </RelativeLayout>
 
         </LinearLayout>
+        </ScrollView>
     </RelativeLayout>
 
 </FrameLayout>
