--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,12 +8,12 @@
         android:title="Input Menu" />
     <item
         android:id="@+id/orderList"
-        android:icon="@drawable/ic_restaurant"
+        android:icon="@drawable/ic_list"
         android:title="List Order" />
 
     <item
         android:id="@+id/printBill"
-        android:icon="@drawable/ic_restaurant"
+        android:icon="@drawable/ic_local_print"
         android:title="Print Bill" />
 
     <item
@@ -27,7 +27,11 @@
     <item
         android:id="@+id/help"
         android:icon="@drawable/ic_help"
-        android:title="Help" />
+        android:title="Who we Are" />
+    <item
+        android:id="@+id/share"
+        android:icon="@drawable/ic_share"
+        android:title="Share With Friend" />
 
     <item
         android:id="@+id/logout"
